my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ECAST/ECAST.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:21:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:28:5: error ECAST: illegal cast to 'uint32'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:30:5: error ECAST: illegal cast to 's_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:34:5: error ECAST: illegal cast to 'l_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:36:5: error ECAST: illegal cast to 'uint32'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:38:5: error ECAST: illegal cast to 'l_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:42:5: error ECAST: illegal cast to 's_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:44:5: error ECAST: illegal cast to 'uint32'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:46:5: error ECAST: illegal cast to 'v_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:50:5: error ECAST: illegal cast to 'alt_v_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:52:5: error ECAST: illegal cast to 'uint32'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:56:5: error ECAST: illegal cast to 'double'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:58:5: error ECAST: illegal cast to 'a_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:62:5: error ECAST: illegal cast to 'f_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:65:5: error ECAST: illegal cast to 'pointer to void'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECAST.dml:67:5: error ECAST: illegal cast to 'int64'
